--- a/src/components/alg/alg-conspect/sp/pages/elem-sp20.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp20.html
@@ -444,6 +444,71 @@ YES
 YES
 NO
 </pre>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Для того чтобы ребро (a,b) было на кратчайшем пути из u в v, необходимо чтобы длина пути (u,v) = (u,a) + 1 + (b,v), где 1 это ребро (a,b). Или (u,v) = (u,b) + 1 + (a,v).</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+#include &lt;queue&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  int n, m;
+  cin >> n >> m;
+  vector&lt;vector&lt;int&gt; &gt; G(n + 1);
+  int x, y;
+  for (int i = 0; i &lt; m; i++) {
+    cin >> x >> y;
+    G[x].push_back(y);
+    G[y].push_back(x);
+  }
+
+  // Собираем вектор длин
+  vector&lt;vector&lt;int&gt; &gt; Len(n + 1, vector&lt;int&gt;(n+1, -1));
+
+  for (int i = 1; i &lt;= n; i++) {
+    queue&lt;int&gt; q;
+    int tmp;
+    q.push(i);
+    Len[i][i] = 0;
+    while (q.size() > 0) {
+      tmp = q.front();
+      q.pop();
+      for (int j = 0; j &lt; G[tmp].size(); j++) {
+        if (Len[i][G[tmp][j]] == -1) {
+          q.push(G[tmp][j]);
+          Len[i][G[tmp][j]] = Len[i][tmp] + 1;
+        }
+      }
+    }
+  }
+
+  // обрабатываем запросы
+  int t;
+  cin >> t;
+  while (t--) {
+    int u, v, a, b;
+    cin >> u >> v >> a >> b;
+    if (Len[u][v] == Len[u][a] + 1 + Len[b][v] ||
+      Len[u][v] == Len[u][b] + 1 + Len[a][v]) {
+      cout &lt;&lt; "YES\n";
+    } else {
+      cout &lt;&lt; "NO\n";
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -530,9 +595,9 @@ NO
   <h4>Входные данные</h4>
   <p>Первая строка содержит целое число n (1 ≤ n ≤ 2000) — количество сотрудников.</p>
 
-  <p>Следующие n строк содержат целые числа pi (1 ≤ pi ≤ n или pi = -1). Каждое pi обозначает непосредственного руководителя i-го сотрудника. Если pi равно -1, то i-ый сотрудник не имеет непосредственного руководителя.</p>
+  <p>Следующие n строк содержат целые числа pᵢ (1 ≤ pᵢ ≤ n или pᵢ = -1). Каждое pᵢ обозначает непосредственного руководителя i-го сотрудника. Если pi равно -1, то i-ый сотрудник не имеет непосредственного руководителя.</p>
 
-  <p>Гарантируется, что никакой сотрудник не является своим собственным непосредственным руководителем (pi ≠ i). Также гарантируется, что структура компании не содержит циклов.</p>
+  <p>Гарантируется, что никакой сотрудник не является своим собственным непосредственным руководителем (pᵢ ≠ i). Также гарантируется, что структура компании не содержит циклов.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — минимальное количество групп, на которые можно разделить всех сотрудников.</p>
@@ -553,6 +618,79 @@ NO
     <li>Сотрудники 2 и 4</li>
     <li>Сотрудники 3 и 5</li>
   </ol>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Нужно разбить граф на компоненты связности. В каждой компоненте посчитеть максимальную удаленность узла от корня. В одной компоненте связности можно объединять людей в группы по уровням (нулевой, первый и т.д.) в которых нет начальников. Группы из разных компонент связности тоже можно объединять, т.к. они не являются начальниками друг друга. Ответ будет максимальная удаленность узла от корня.</p>
+    <p>Из входных данных соберем список смежности. Создадим вектор векторов, в котором будем хранить человка и его подчиненного или -1 если подчиненного нет.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+#include &lt;queue&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+void bfs(vector&lt;vector&lt;int&gt; &gt;& G,
+  vector&lt;int&gt;& Mark,
+  vector&lt;int&gt;& Len,
+  int start) {
+  queue&lt;int&gt; q;
+  q.push(start);
+  Mark[start] = 1;
+  Len[start] = 0;
+  while (q.size() > 0) {
+    int tmp = q.front();
+    q.pop();
+    for (int i = 0; i &lt; G[tmp].size(); i++) {
+      if (Mark[G[tmp][i]] == 0) {
+        Mark[G[tmp][i]] = 1;
+        Len[G[tmp][i]] = Len[tmp] + 1;
+        q.push(G[tmp][i]);
+      }
+    }
+  }
+}
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  int n;
+  cin >> n;
+  vector&lt;vector&lt;int&gt; &gt; G(n + 1);
+  vector&lt;int&gt; Root;
+  int x, y;
+  for (int i = 1; i &lt;= n; i++) {
+    cin >> y;
+    x = i;
+    if (y == -1) {
+      Root.push_back(i);
+    } else {
+      G[x].push_back(y);
+      G[y].push_back(x);
+    }
+  }
+
+  // решение
+  vector&lt;int&gt; Mark(n + 1);
+  vector&lt;int&gt; Len(n + 1);
+  for (int i = 0; i &lt; Root.size(); i++) {
+    bfs(G, Mark, Len, Root[i]);
+  }
+  int res = 0;
+  for (int i = 1; i &lt;= n; i++) {
+    res = max(res, Len[i]);
+  }
+
+  // вывод результата
+  cout &lt;&lt; res + 1;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -668,14 +806,14 @@ NO
 
   <p>Новый год приходит в Линейный мир! В этом мире есть n ячеек, пронумерованных целыми числами от 1 до n, уложенных в виде доски размером 1 x n. В ячейках живут люди. Однако, передвигаться между различными ячейками сложно, ведь выйти из ячейки — дело непростое. В то же время, люди хотят знакомиться с людьми, живущими в других ячейках.</p>
 
-  <p>И вот, tncks0121 придумал систему транспорта для передвижения между ячейками, чтобы люди могли отпраздновать Новый год. Сперва он задумал n - 1 положительных целых чисел a1, a2, ..., an - 1. Для каждого целого числа i, где 1 ≤ i ≤ n - 1, выполняется условие 1 ≤ ai ≤ n - i. Затем он создал n - 1 порталов, пронумерованных целыми числами от 1 до n - 1. Из них i-й (1 ≤ i ≤ n - 1) портал соединяет ячейку номер i и ячейку номер (i + ai), т. е. с его помощью можно путешествовать из ячейки i в ячейку (i + ai). К сожалению, портал не работает в обратную сторону, то есть нельзя пройти из ячейки (i + ai) в ячейку i по i-му порталу. Легко заметить, что из-за условия 1 ≤ ai ≤ n - i нельзя покинуть Линейный мир, пользуясь порталами.</p>
+  <p>И вот, tncks0121 придумал систему транспорта для передвижения между ячейками, чтобы люди могли отпраздновать Новый год. Сперва он задумал n - 1 положительных целых чисел a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n-1</sub>. Для каждого целого числа i, где 1 ≤ i ≤ n - 1, выполняется условие 1 ≤ aᵢ ≤ n - i. Затем он создал n - 1 порталов, пронумерованных целыми числами от 1 до n - 1. Из них i-й (1 ≤ i ≤ n - 1) портал соединяет ячейку номер i и ячейку номер (i + aᵢ), т. е. с его помощью можно путешествовать из ячейки i в ячейку (i + aᵢ). К сожалению, портал не работает в обратную сторону, то есть нельзя пройти из ячейки (i + aᵢ) в ячейку i по i-му порталу. Легко заметить, что из-за условия 1 ≤ aᵢ ≤ n - i нельзя покинуть Линейный мир, пользуясь порталами.</p>
 
   <p>Я нахожусь в ячейке 1 и хочу пройти в ячейку t. Однако я не знаю, могу ли я там оказаться. Пожалуйста, определите, могу ли я пройти в ячейку t, пользуясь только построенной системой транспорта.</p>
 
   <h4>Входные данные</h4>
   <p>В первой строке записано два целых числа через пробел, n (3 ≤ n ≤ 3 x 10⁴) и t (2 ≤ t ≤ n) — количество ячеек и номер ячейки, в которую я хочу попасть.</p>
 
-  <p>Во второй строке записано n - 1 целых чисел через пробел a1, a2, ..., an - 1 (1 ≤ ai ≤ n - i). Гарантируется, что пользуясь данной транспортной системой, покинуть Линейный мир нельзя.</p>
+  <p>Во второй строке записано n - 1 целых чисел через пробел a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n-1</sub> (1 ≤ aᵢ ≤ n - i). Гарантируется, что пользуясь данной транспортной системой, покинуть Линейный мир нельзя.</p>
 
   <h4>Выходные данные</h4>
   <p>Если я могу дойти до ячейки t по данной транспортной системе, выведите "YES". В противном случае, выведите "NO".</p>
@@ -696,6 +834,49 @@ NO
   <p>В первом примере можно дойти до t, посетив следующие ячейки: 1, 2, 4.</p>
 
   <p>Во втором примере можно посетить лишь ячейки 1, 2, 4, 6, 7, 8; значит, мы не можем попасть в требуемую ячейку 5.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Транспорт везет из вершины 0 только вперед на определенное число ячеек. Поэтому мы можем попасть в какую-то ячейку, а можем не попасть, то есть проехать мимо нее.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  int n, t;
+  cin >> n >> t;
+  vector&lt;int&gt; G(n + 1);
+  for (int i = 1; i &lt; n; i++) {
+    cin >> G[i];
+  }
+
+  // решение
+  bool flag = false;
+  int start = 1;
+  while (start != n) {
+    start += G[start];
+    if (start == t) {
+      flag = true;
+    }
+  }
+
+  // вывод результата
+  if (flag) {
+    cout &lt;&lt; "YES";
+  } else {
+    cout &lt;&lt; "NO";
+  }
+ }
+</pre>
+  </details>
 </article>
 
 
@@ -1164,18 +1345,18 @@ NO
   <p>Вам даны заклинания s и t. Может ли Drahyrt изменить заклинание s на t?</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке входных данных дано единственное целое число T (1≤T≤104) — количество наборов входных данных в тесте.</p>
+  <p>В первой строке входных данных дано единственное целое число T (1 ≤ T ≤ 10⁴) — количество наборов входных данных в тесте.</p>
 
   <p>Далее следуют описания наборов входных данных.</p>
 
-  <p>В первой строке содержится два целых числа n,k (1≤n≤2⋅105, k=3) — длина заклинаний и число k такое, что Drahyrt может менять буквы в заклинании на расстоянии k
+  <p>В первой строке содержится два целых числа n,k (1 ≤ n ≤ 2⋅10⁵, k=3) — длина заклинаний и число k такое, что Drahyrt может менять буквы в заклинании на расстоянии k
   или k+1.</p>
 
   <p>Во второй строке дано заклинание s — строка длины n, состоящая из строчных латинских букв.</p>
 
   <p>В третьей строке дано заклинание t — строка длины n, состоящая из строчных латинских букв.</p>
 
-  <p>Гарантируется, что сумма значений n по всем наборам входных данных не превосходит 2⋅105. Обратите внимание, что ограничений на сумму значений k по всем наборам входных данных нет.</p>
+  <p>Гарантируется, что сумма значений n по всем наборам входных данных не превосходит 2⋅10⁵. Обратите внимание, что ограничений на сумму значений k по всем наборам входных данных нет.</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите в отдельной строке «YES» если Drahyrt может изменить заклинание s на t и «NO» иначе.</p>
@@ -1232,5 +1413,86 @@ NO
   <p>В пятом примере можно показать, что невозможно получить из строки s строку t.</p>
 
   <p>В шестом примере достаточно поменять местами две крайние буквы.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Решение будет зависить от длины строки n. Рассмотрим четыре случая.</p>
+    <ol>
+      <li>Если длина строки n ≥ 6, то все символы можно менять как угодно.</li>
+      <li>Если n = 5, то символы с индексами 0,1,3,4 можно менять как угодно, а символ с индексом 2 должен совпасть у обеих строк.</li>
+      <li>При n = 4 можем менять только 1 с 4.</li>
+      <li>При n &lt; 4 строки должны полностью совпасть.</li>
+    </ol>
+    <p>Возможно не работает</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;iomanip&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios::sync_with_stdio(0);
+  cin.tie(0);
+
+  // ввод данных
+  int test;
+  cin >> test;
+
+  while (test--) {
+    int n, k;
+    cin >> n >> k;
+    string s, t;
+    cin >> s >> t;
+
+    // 1 случай
+    if (n >= 6) {
+      sort(s.begin(), s.end());
+      sort(t.begin(), t.end());
+      if (s == t) {
+        cout &lt;&lt; "YES\n";
+      } else {
+        cout &lt;&lt; "NO\n";
+      }
+
+    // 2 случай
+    } else if (n == 5) {
+      string buf1, buf2;
+      buf1 = s[0] + s[1] + s[3] + s[4];
+      buf2 = t[0] + t[1] + t[3] + t[4];
+      sort(buf1.begin(), buf1.end());
+      sort(buf2.begin(), buf2.end());
+      if ( (s[2] == t[2]) && (buf1 == buf2) ) {
+        cout &lt;&lt; "YES\n";
+      } else {
+        cout &lt;&lt; "NO\n";
+      }
+
+    // 3 случай
+    } else if (n == 4) {
+      string buf1, buf2;
+      buf1 = s[0] + s[3];
+      buf2 = t[0] + t[3];
+      sort(buf1.begin(), buf1.end());
+      sort(buf2.begin(), buf2.end());
+      if ( (s[1] == t[1]) && (s[2] == t[2]) && (buf1 == buf2) ) {
+        cout &lt;&lt; "YES\n";
+      } else {
+        cout &lt;&lt; "NO\n";
+      }
+
+    // 4 случай
+    } else {
+      if (s == t) {
+        cout &lt;&lt; "YES\n";
+      } else {
+        cout &lt;&lt; "NO\n";
+      }
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
