--- a/src/components/front/front-learned/pages/elem-books.html
+++ b/src/components/front/front-learned/pages/elem-books.html
@@ -74,8 +74,7 @@
     <p><strong>[2018] React.js для начинающих (2е)</strong><br>Пацианский<br>147 стр</p>
   </li>
   <li class="list-item yellow">2023-03-18 сб
-    <p><strong>[2016] Введение в ECMAScript 6</strong><br>Нараян Прасти<br>178 стр<br>( Learning ESMAScript 6 (eng) -
-      Narayan Prusty )</p>
+    <p><strong>[2016] Введение в ECMAScript 6</strong><br>Нараян Прасти<br>178 стр<br>( Learning ESMAScript 6 (eng) - Narayan Prusty )</p>
   </li>
   <li class="list-item yellow">2023-12-28 чт
     <p><strong>[2000] Практические занятия по JavaScript</strong><br>Николенко<br>129 стр</p>
